--- a/RedditTop/Base.lproj/LaunchScreen.storyboard
+++ b/RedditTop/Base.lproj/LaunchScreen.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,7 +21,17 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="reddit" translatesAutoresizingMaskIntoConstraints="NO" id="1Y4-at-LWV">
+                                <rect key="frame" x="66" y="205" width="243" height="256"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="0.792156862745098" green="0.87058823529411766" blue="0.94509803921568625" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="1Y4-at-LWV" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="50X-Yb-6Ou"/>
+                            <constraint firstItem="1Y4-at-LWV" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="50" id="Cor-2W-fd2"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="1Y4-at-LWV" secondAttribute="trailing" constant="50" id="mza-c4-xsG"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -28,4 +39,7 @@
             <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="reddit" width="256" height="256"/>
+    </resources>
 </document>
