Mejora la organización de los archivos
 * Agrega celda de carga.

--- a/RedditTop/Base.lproj/Main.storyboard
+++ b/RedditTop/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="sectionIndexBackgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="redditEntryCell" rowHeight="113" id="WcN-LK-39u" customClass="RedditEntryTableViewCell" customModule="RedditTop" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="redditEntryCell" rowHeight="113" id="WcN-LK-39u" customClass="RedditEntryTableViewCell" customModule="RedditTop" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="55.5" width="414" height="113"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="WcN-LK-39u" id="eQ9-CM-zeu">
@@ -167,6 +167,37 @@
                                             <outlet property="lblTitle" destination="Hh9-Fa-B8c" id="xmA-yK-wJ7"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="loadingCell" rowHeight="38" id="ONs-ri-n6f" customClass="RedditEntryTableViewCell" customModule="RedditTop" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="169" width="414" height="38"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ONs-ri-n6f" id="wXw-JO-h5L">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="37.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cargando" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Y6-iJ-GgQ">
+                                                    <rect key="frame" x="8" y="8" width="75" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="vXz-Il-U1E">
+                                                    <rect key="frame" x="91" y="8" width="20" height="22"/>
+                                                </activityIndicatorView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottomMargin" secondItem="0Y6-iJ-GgQ" secondAttribute="bottom" id="4eR-Zv-CNH"/>
+                                                <constraint firstItem="vXz-Il-U1E" firstAttribute="top" secondItem="wXw-JO-h5L" secondAttribute="topMargin" id="F5R-oo-1jC"/>
+                                                <constraint firstItem="vXz-Il-U1E" firstAttribute="leading" secondItem="0Y6-iJ-GgQ" secondAttribute="trailing" constant="8" id="GAg-mM-1ai"/>
+                                                <constraint firstItem="vXz-Il-U1E" firstAttribute="centerY" secondItem="0Y6-iJ-GgQ" secondAttribute="centerY" id="MX2-IX-Q89"/>
+                                                <constraint firstItem="0Y6-iJ-GgQ" firstAttribute="top" secondItem="wXw-JO-h5L" secondAttribute="topMargin" id="mMF-sG-4Sw"/>
+                                                <constraint firstItem="0Y6-iJ-GgQ" firstAttribute="leading" secondItem="wXw-JO-h5L" secondAttribute="leadingMargin" id="zPV-Ww-7cE"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        <variation key="heightClass=compact-widthClass=regular">
+                                            <color key="backgroundColor" red="0.20000000000000001" green="0.40000000000000002" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        </variation>
+                                    </tableViewCell>
                                 </prototypes>
                                 <variation key="heightClass=compact-widthClass=regular">
                                     <color key="backgroundColor" red="0.20000000000000001" green="0.40000000000000002" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
@@ -251,7 +282,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1055.7065217391305" y="123.18840579710145"/>
+            <point key="canvasLocation" x="1055.072463768116" y="123.09782608695653"/>
         </scene>
         <!--Reddit Detail View Controller-->
         <scene sceneID="0NT-Bw-eqm">
